# SolarPanelCalculator

./: .gitignore  README.md  RUN_DASHBOARD.sh  app.py  calculate_savings.py  inverter_data_2024-10-01T00_00_00_to_2024-12-31T23_59_59.csv  inverter_data_2025-01-01T00_00_00_to_2025-09-30T23_59_59.csv  inverter_data_2025-10-01to_2025-10-28T23_59_59.csv  prices_data_2024-10-01T00_00_00_to_2024-12-31T23_59_59.csv  prices_data_2025-01-01T00_00_00_to_2025-09-30T23_59_59.csv  prices_data_2025-10-01T00_00_00_to_2025-10-28T23_59_59.csv  pyproject.toml  requirements.txt
