[project]
name = "solar-panel-analysis"
version = "0.1.0"
description = "Solar panel capital savings analysis with interactive dashboard"
authors = [
    {name = "Ofer Hai",email = "oferhai@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
    "streamlit (>=1.28.0)",
    "plotly (>=5.0.0)",
    "pandas (>=1.5.0)",
    "numpy (>=1.24.0)",
    "matplotlib (>=3.7.0,<3.10)",
    "seaborn (>=0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
